--- a/main.html
+++ b/main.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <header>
-    The Office Supply Warehouse
+    <h1>
+        The Office Supply Warehouse Shop
+    </h1>
 </header>
 <body>
     
