--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">home</a>
+                        <a class="nav-link" href="main.html">home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="shop.html">shop</a>
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="login.html">login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="register.html">register</a>
+                        <a class="nav-link" href="sign_up.html">register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cart.html">Cart</a>
