--- a/main.html
+++ b/main.html
@@ -24,16 +24,16 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="main.html">home</a>
+                        <a class="nav-link" href="main.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html">shop</a>
+                        <a class="nav-link" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">login</a>
+                        <a class="nav-link" href="login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sign_up.html">register</a>
+                        <a class="nav-link" href="sign_up.html">Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cart.html">Cart</a>
