--- a/contact_us.html
+++ b/contact_us.html
@@ -6,6 +6,57 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <link rel="stylesheet" href="./CSS/main.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+ 
+ <!-- Background & animion & navbar & title -->
+   <div class="container-fluid">
+ 
+     <div class="background">
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+       <div class="cube"></div>
+     </div>
+ 
+    <header>
+ 
+      <nav>
+         <ul>
+             <li class="nav-item">
+                 <a class="nav-link" href="main.html">Home</a>
+             </li>
+             <li class="nav-item">
+                 <a class="nav-link" href="shop.html">Shop</a>
+             </li>
+             <li class="nav-item">
+                 <a class="nav-link" href="login.html">Login</a>
+             </li>
+             <li class="nav-item">
+                 <a class="nav-link" href="register.html">Register</a>
+             </li>
+             <li class="nav-item">
+                 <a class="nav-link" href="cart.html">Cart</a>
+             </li>
+        </nav>
+        
+ 
+       <section class="header-content">
+          <h1>Contact Us</h1>
+         <p>email: support@officewarehouse.com<br>
+            phone: +1 (000)000-0000</p>
+            <p>Business Hours<br>
+            Monday: 8:00 AM - 5:00 PM ET<br>
+        Tuesday: 8:00 AM - 5:00 PM ET<br>
+    Wednesday: 8:00 AM - 5:00 PM ET<br>
+Thursdays: 8:00 AM - 5:00 PM ET<br>
+Fridays: 9:00 AM - 1:00 PM ET<br>
+Saturdays: CLOSED<br>
+Sundays: CLOSED</p>
+
+ 
+  
 </body>
 </html>
