--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="login.html">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="sign_up.html">Register</a>
+                <a class="nav-link" href="register.html">Register</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="cart.html">Cart</a>
@@ -44,9 +44,9 @@
        </nav>
 
       <section class="header-content">
-         <h1>Welcome</h1>
-        <p> Welcome to our studio. We are a passionated group of people,<br>
-           making high quality products designed to make your life easier.</p>
+         <h1>Office Warehouse Supply Shop</h1>
+        <p> Welcome to the office supply shop, where we deliver and create<br>
+           high quality products to provide for offices.</p>
 
   <button id="aboutBtn">About Us</button>
 
