--- a/register.html
+++ b/register.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
-<body>
+
+<body id="home-page">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,6 +29,9 @@
                     <a class="nav-link" href="login.html">Login</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="register.html">Register</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="cart.html">Cart</a>
                 </li>
             </ul>
@@ -35,13 +40,13 @@
     </nav>
     <header>
         <h1>
-            Fall Aesthetics Shop
+            The Office Warehouse Supply Shop
 
         </h1>
     </header>
     <main>
         <p>
-            Login
+            Register
         </p>
         <form>
             <div class="mb-3">
@@ -50,15 +55,35 @@
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
+                <label for="exampleInputEmail1" class="form-label">First Name</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" minlength="5" maxlength="50">
+                <div id="emailHelp" class=".</div>
+              </div>
+              <div class="mb-3">
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Last Name</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" minlength="5" maxlength="50">
+                    <div id="emailHelp" class="form-text">.</div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input minlength="5" maxlength="50" type="password" class="form-control" id="exampleInputPassword1">
+                  </div>
+                  <div class="mb-3 form-check">
+                </form>
+                      
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Re-Enter Password</label>
               <input minlength="5" maxlength="50" type="password" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Remember Me</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Register</button>
           </form>
     </main>
+
 </body>
+
 </html>
