--- a/shop.html
+++ b/shop.html
@@ -1,1 +1,104 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+
+<!-- Background & animion & navbar & title -->
+  <div class="container-fluid">
+
+    <div class="background">
+       <div class="cube"></div>
+       <div class="cube"></div>
+       <div class="cube"></div>
+       <div class="cube"></div>
+      <div class="cube"></div>
+    </div>
+</head>
+
+<body id="home-page">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="main.html">home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="shop.html">shop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="register.html">register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cart.html">Cart</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
+    <header>
+        <h1>
+            SHOP
+
+        </h1>
+    </header>
+    <main>
+        <h2>
+            <strong>Shop</strong> 
+        </h2>
+
+        <div class="card" style="width: 18rem;">
+            <img src="./Photos/binders.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Binders</h5>
+                <p class="card-text">
+                    Purchase binders in bulk (200)
+                <div class="price">$199.99</div>
+                </p>
+                <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>  
+        <div class="card" style="width: 18rem;">
+            <img src="./Photos/printer_paper.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Printer Paper</h5>
+                <p class="card-text">
+                    Purchase printer paper in bulk (200)
+                </p>
+                <div class="price">$129.99</div>
+                
+                </p>
+                <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>          
+        <div class="card" style="width: 18rem;">
+            <img src="./Photos/penz.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Pens</h5>
+                <p class="card-text">
+                    Shop pens in bulk (200)
+                <div class="price">$199.99</div>
+                </p>
+                <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>          
+     </main>
+
+</body>
+
+</html>
