--- a/shop.html
+++ b/shop.html
@@ -23,8 +23,15 @@
     </div>
 </head>
 
-<body id="home-page">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<body>
+    <div class="background">
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+        <div class="cube"></div>
+       <div class="cube"></div>
+     </div>
+    <nav class="navbar navbar-expand-lg ">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -51,16 +58,9 @@
         </div>
 
     </nav>
-    <header>
-        <h1>
-            SHOP
-
-        </h1>
-    </header>
+    
     <main>
-        <h2>
-            <strong>Shop</strong> 
-        </h2>
+     
 
         <div class="card" style="width: 18rem;">
             <img src="./Photos/binders.jpg" class="card-img-top" alt="...">
