--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./cart.css">
+    <img src="./Photos/squares.gif" class="img-fluid" style="position: fixed; width: 100%; height: 100vh; z-index: -1;">
 </head>
 
 <body id="home-page">
