--- a/main.html
+++ b/main.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./CSS/main.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     
-    <link rel="stylesheet" href="./CSS/main.css">
-
-   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+ 
 
 <!-- Background & animion & navbar & title -->
   <div class="container-fluid">
@@ -48,7 +49,7 @@
         <p> Welcome to the office supply shop, where we deliver and create<br>
            high quality products to provide for offices.</p>
 
-  <button id="aboutBtn">About Us</button>
+  <button id="aboutBtn"><img src="./Photos/groups.svg" alt="About"> About Us</button>
 
 <script>
   document.getElementById("aboutBtn").addEventListener("click", function() {
@@ -56,7 +57,7 @@
   });
 </script>
 
-<button id="contactBtn">Contact Us</button>
+<button id="contactBtn"><img src="./Photos/contact.svg" alt="Contact"> Contact Us</button>
 
 <script>
   document.getElementById("contactBtn").addEventListener("click", function() {
