--- a/register.html
+++ b/register.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/main.css">
+    <img src="./Photos/squares.gif" class="img-fluid" style="position: fixed; width: 100%; height: 100vh; z-index: -1;">
+
 </head>
 
 <body id="home-page">
@@ -38,14 +41,12 @@
     </nav>
     <header>
         <h1>
-            The Office Warehouse Supply Shop
+            Register
 
         </h1>
     </header>
     <main>
-        <p>
-            Register
-        </p>
+        
         <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
